tests/functional/lang/parse-fail/unexpected-path.err.exp
error: syntax error, unexpected path, expecting identifier or 'or' or '${' or '"'
       at «stdin»:1:7:
            1| { } ? ./foo
             |       ^
            2|
